[package]
name = "rust-warp-jwt-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "8.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.6"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
